--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,13 @@
 !!!
 %html
   %head
-    %title Rotten Potatoes!
+    %title Force request System!
     = stylesheet_link_tag 'application', 'media' => 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
   %body
-    %h1.title Rotten Potatoes!
+    %h1.title CSE Force request System 
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
