Fix minor issues in code and addition of validations

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -33,18 +33,18 @@ h1.title {
   font-size: 2em;
   font-style: normal;
 }
-table#movies {
+table#student_requests {
   margin: 10px;
   border-collapse: collapse;
   width: 100%;
   border-bottom: 2px solid black;
 }
-table#movies th {
+table#student_requests th {
   border: 2px solid white;
   font-weight: bold;
   background-color: wheat;
 }
-table#movies th, table#movies td {
+table#student_requests th, table#student_requests td {
   padding: 4px;
   text-align: left;
 }
