--- a/app/views/student_requests/index.html.haml
+++ b/app/views/student_requests/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Students Dashboard Page
 
-%table#movies
+%table#student_requests
   %thead
     %tr
       %th UIN
@@ -25,7 +25,7 @@
         %td= record.course_id
         %td= record.section_id
         %td= record.state
-        %td = link_to <button type="button">Cancel</button>'.html_safe
+        %td= link_to('<button type="button">Cancel</button>'.html_safe, new_student_request_path)
         
   = link_to '<button type="button">New Force Request</button>'.html_safe, new_student_request_path
           
