Correcting Withdraw student requests-- 1. using button_to in place of link_to for put method 2. using update method to do it in place of edit

--- a/app/views/student_requests/index.html.haml
+++ b/app/views/student_requests/index.html.haml
@@ -25,8 +25,9 @@
         %td= record.course_id
         %td= record.section_id
         %td= record.state
-        %td= link_to('<button type="button">Withdraw</button>'.html_safe, edit_student_request_path(record), :confirm => 'Are You Sure?')
-        
+        %td= button_to 'Withdraw', {:action => "update", :id => record.request_id, :controller => "student_requests"}, :method => :put
+
+
   = link_to '<button type="button">New Force Request</button>'.html_safe, new_student_request_path
           
         
