--- a/app/views/student_requests/login.html.haml
+++ b/app/views/student_requests/login.html.haml
@@ -3,4 +3,4 @@
 %p= button_to 'Student Login', {:action => "index", :controller => "student_requests"}, :method => :get
 
 //Currently Admin Login also links to student page. Once admin page is in postition we can link it to admin_request#index.
-%p= button_to 'Admin Login', {:action => "index", :controller => "student_requests"}, :method => :get
+%p= button_to 'Admin Login', {:action => "adminview", :controller => "student_requests"}, :method => :get
