--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -1,30 +1,34 @@
-%h1 Students Dashboard Page
+%h1 
+  Admin Dashboard Page
 
-%table#student_requests
-  %thead
-    %tr
-      %th UIN
-      %th Full Name
-      %th Major
-      %th Classification
-      %th Minor
-      %th Course ID
-      %th Section ID
-      %th State
-      %th Action
+- @allcourses.each do |course|
+  %h1
+    Course Name #{course}
+  %table#student_requests
+    %thead 
+      %tr
+        %th UIN
+        %th Full Name
+        %th Major
+        %th Classification
+        %th Minor
+        %th Course ID
+        %th Section ID
+        %th State
+        %th Action
       
      
-  %tbody
-    - @student_requests.each do |record|
-      %tr
-        %td= record.uin 
-        %td= record.full_name
-        %td= record.major
-        %td= record.classification
-        %td= record.minor
-        %td= record.course_id
-        %td= record.section_id
-        %td= record.state
-        %td= select "update" , :state, options_for_select(["approve", "reject"], record.state = :selected )
-        %td= button_to 'Select', {:action => "update", :id => record.request_id, :controller => "student_requests", :pval => record.state }, :method => :put
-        %td= button_to 'Email'
+    %tbody
+      - @coursestudentlist[course].each do |record|
+        %tr
+          %td= record.uin 
+          %td= record.full_name
+          %td= record.major
+          %td= record.classification
+          %td= record.minor
+          %td= record.course_id
+          %td= record.section_id
+          %td= record.state
+          %td= select "update" , :state, options_for_select(["approve", "reject"], :selected )
+          %td= button_to 'Select', {:action => "update", :id => record.request_id, :controller => "student_requests", :pval => record.state }, :method => :put
+          %td= button_to 'Email'
