--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -14,6 +14,7 @@
         %th Course ID
         %th Section ID
         %th State
+        %th Notes
         %th Action
         %th Email
       
@@ -29,9 +30,13 @@
           %td= record.course_id
           %td= record.section_id
           %td= record.state
+          %td= record.notes
           %td
+            %center
             = form_tag('/student_requests/updaterequestbyadmin', method: "put") do
               = hidden_field_tag 'id', record.request_id
               = select_tag("state", options_for_select(@allAdminStates))
+              %textarea{:name => "notes_for_student", :placeholder => "Notes for student"}
+              %textarea{:name => "notes_for_myself", :placeholder => "Notes for Myself"}
               = submit_tag 'Update'
           %td= mail_to record.email, "email"
