--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -22,6 +22,7 @@
         %th Course ID
         %th Section ID
         %th State
+        %th Priority
         %th Notes
         %th Action
         %th Email
@@ -38,6 +39,7 @@
           %td= record.course_id
           %td= record.section_id
           %td= record.state
+          %td= record.priority
           %td= record.notes
           %td
             %center
@@ -46,5 +48,6 @@
               %textarea{:name => "notes_for_student", :placeholder => "Notes for student"}
               %textarea{:name => "notes_for_myself", :placeholder => "Notes for Myself"}
               = select_tag("state", options_for_select(@allAdminStates))
+              = select_tag("priority", options_for_select(@allPriorityStates))
               = submit_tag 'Update'
           %td= mail_to record.email, "email"
