--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -27,24 +27,24 @@ h1 {
 h1.title {
   margin: 0 0 1em;
   padding: 10px;
-  background-color: orange;
+  background-color: maroon;
   color: white;
-  border-bottom: 4px solid gold;
+  border-bottom: 4px solid brown;
   font-size: 2em;
   font-style: normal;
 }
-table#student_requests {
+table {
   margin: 10px;
   border-collapse: collapse;
   width: 100%;
   border-bottom: 2px solid black;
 }
-table#student_requests th {
+table th {
   border: 2px solid white;
   font-weight: bold;
   background-color: wheat;
 }
-table#student_requests th, table#student_requests td {
+table th, table td {
   padding: 4px;
   text-align: left;
 }
@@ -58,4 +58,45 @@ form label {
   line-height: 25px;
   font-weight: bold;
   color: maroon;
+}
+.course_id_button {
+  background-color:maroon;
+	border:1px solid #18ab29;
+	display:inline-block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+	width:100%;
+	text-align:left;
+}
+
+caption {
+	padding: 0 0 5px 0;
+	width: 700px;	 
+	font: italic 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+	text-align: right;
+}
+
+th {
+	font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+	color: #4f6b72;
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+	border-top: 1px solid #C1DAD7;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	text-align: left;
+	padding: 6px 6px 6px 12px;
+	background: #CAE8EA url(images/bg_header.jpg) no-repeat;
+}
+
+td {
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+	background: #fff;
+	padding: 6px 6px 6px 12px;
+	color: #4f6b72;
 }
