--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -100,3 +100,37 @@ td {
 	padding: 6px 6px 6px 12px;
 	color: #4f6b72;
 }
+.input-field {
+	background-color :Lightgray;
+	border: 1px solid #008000;
+	width: 230px;
+}
+input[type=submit] {
+    width: 100%;
+    background-color: brown;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.form_new_request {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/*input[type=text_area] {*/
+/*    width: 100%;*/
+/*}*/
