--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -61,7 +61,7 @@
         %td   
           = label :student_request, :notes, 'Notes '
         %td  
-          = text_area :student_request, 'notes', class: 'input-field'
+          = text_area :student_request, 'notes', class: 'notes'
   
     %br
     %br
