--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -42,7 +42,8 @@ table {
 table th {
   border: 2px solid white;
   font-weight: bold;
-  background-color: wheat;
+  color: white;
+  background-color: #d55d5d;
 }
 table th, table td {
   padding: 4px;
@@ -122,6 +123,12 @@ input[type=submit] {
     padding: 20px;
 }
 
+.filter_form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
 #update_admin_form {
     border-radius: 5px;
     background-color: #f2f2f2;
@@ -148,7 +155,7 @@ input[type=submit] {
 }
 
 .update_admin {
-  width: 30%;
+  width: 25%;
 }
 
 
@@ -167,4 +174,15 @@ input[type=submit] {
 	padding:16px 31px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
+}
+
+input[type=submit].filter {
+    width: 10%;
+    background-color: maroon;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
