--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -1,23 +1,26 @@
 %h1 
   Admin Dashboard Page
-= form_tag student_requests_adminview_path, :method => :get do
-  Filter Requests - State:
-  - @all_states.each do |state|
-    = state
-    = check_box_tag "state_sel[#{state}]", 'true', @state_selected[state]
-  = submit_tag 'Refresh'
+.filter_form
+  = form_tag student_requests_adminview_path, :method => :get do
+    %h4
+      Filter Requests - State:
+      - @all_states.each do |state|
+        = state
+        = check_box_tag "state_sel[#{state}]", 'true', @state_selected[state]
+      = submit_tag 'Refresh', class: "filter"
   
-= form_tag student_requests_adminview_path, :method => :get do
-  Filter Requests - Priority:
-  - @all_priorities.each do |priority|
-    = priority
-    = check_box_tag "priority_sel[#{priority}]", 'true', @priority_selected[priority]
-  = submit_tag 'Refresh'
+  = form_tag student_requests_adminview_path, :method => :get do
+    %h4
+      Filter Requests - Priority:
+      - @all_priorities.each do |priority|
+        = priority
+        = check_box_tag "priority_sel[#{priority}]", 'true', @priority_selected[priority]
+      = submit_tag 'Refresh', class: "filter"
   
 - @allcourses.each do |course|
   %h4
     %input{:onclick => "return toggleMe('student_requests_#{course}')", :type => "button", :value => "Course Name #{course}", :class => "course_id_button"}
-  = link_to "Download as .xlsx", student_requests_getSpreadsheet_path(format: "csv", :course_id => course)
+  = link_to "Download as Excel Sheet", student_requests_getSpreadsheet_path(format: "csv", :course_id => course)
   %table{:id => "student_requests_#{course}", :class => "student_requests"}
     %thead 
       %tr
