Flash notice css

--- a/app/views/student_requests/student_init.html.haml
+++ b/app/views/student_requests/student_init.html.haml
@@ -1,9 +1,12 @@
 %h1 Login Page
-
-=  form_tag('/student_requests/login', method: :post) do
-  = label :session, :uin, 'Enter your UIN'
-  = text_field(:session, :uin)
-  
-  %br
-  %br
-  = submit_tag 'Login'
+.form_new_request
+  =  form_tag('/student_requests/login', method: :post) do
+    %table{:border => "0"}
+      %tr
+        %td
+          = label :session, :uin, 'Enter your UIN'
+        %td
+          = text_field(:session, :uin, class: 'input-field')
+    %br
+    %br
+    = submit_tag 'Login'
