--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+#notice {
+border: 1px solid;
+margin: 10px 0px;
+padding:15px 10px 15px 50px;
+background-repeat: no-repeat;
+background-position: 10px center;
+}
+#notice {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+ }
