--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -135,7 +135,7 @@ input[type=submit] {
     padding: 20px;
 }
 
-.form_new_request input[type=text], select {
+.form_new_request input[type=text], input[type=email], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -236,3 +236,10 @@ table.sortable thead {
     text-decoration: none;
     cursor: pointer;
 }
+
+select 
+{
+    height:30px;
+    line-height:30px;
+    background:#f4f4f4;
+} 
