--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -1,27 +1,27 @@
 %h1 Making New Request
 .form_new_request
-  = form_tag student_requests_path do
+  = form_tag student_requests_path, :id => 'new_request' do
     %table{:border => "0"}
       %tr
         %td
           = label :student_request, :uin , 'UIN'
         %td
-          = text_field :student_request, :uin, class: 'input-field'
+          = text_field :student_request, :uin, class: 'input-field', :required => true
       %tr
         %td
           = label :student_request, :full_name, 'Full Name'
         %td  
-          = text_field :student_request, 'full_name', class: 'input-field'
+          = text_field :student_request, 'full_name', class: 'input-field', :required => true
       %tr
         %td  
           = label :student_request, :major, 'Major'
         %td  
-          = text_field :student_request, 'major', class: 'input-field'
+          = text_field :student_request, 'major', class: 'input-field', :required => true
       %tr
         %td   
           = label :student_request, :classification, 'Classification'
         %td  
-          = select :student_request, 'classification', @classificationList
+          = select :student_request, 'classification', @classificationList, :required => true
       %tr
         %td    
           = label :student_request, :minor, 'Minor'
@@ -31,7 +31,7 @@
         %td 
           = label :student_request, :email, 'Email'
         %td  
-          = text_field :student_request, 'email', class: 'input-field'
+          = text_field :student_request, 'email', class: 'input-field', :type => 'email', :required => true
       %tr
         %td   
           = label :student_request, :phone, 'Phone'
@@ -40,23 +40,23 @@
       %tr
         %td   
           = label :student_request, :expected_graduation, 'Expected Graduation'
-        %td  
-          = text_field :student_request, 'expected_graduation', class: 'input-field'
+        %td 
+          = select :student_request, 'expected_graduation', @expectedGraduationList
       %tr
         %td   
           = label :student_request, :request_semester, 'Request Semester'
         %td  
-          = text_field :student_request, 'request_semester', class: 'input-field'
+          = select :student_request, 'request_semester', @requestSemesterList, :required => true
       %tr
         %td   
           = label :student_request, :course_id, 'Course Id'
         %td  
-          = text_field :student_request, 'course_id', class: 'input-field'
+          = text_field :student_request, 'course_id', class: 'input-field', :required => true
       %tr
         %td   
           = label :student_request, :section_id, 'Section Id'
         %td  
-          = text_field :student_request, 'section_id', class: 'input-field'
+          = text_field :student_request, 'section_id', class: 'input-field', :required => true
       %tr
         %td   
           = label :student_request, :notes, 'Notes '
@@ -65,4 +65,4 @@
   
     %br
     %br
-    = submit_tag 'Save Request'
+    = submit_tag 'Save Request', :onclick => "return formValidation()"
