--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -1,5 +1,5 @@
 
-
+= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :get
 %h1 
   Admin Dashboard Page
 .filter_form
