--- a/app/views/student_requests/getStudentInformationByUin.html.haml
+++ b/app/views/student_requests/getStudentInformationByUin.html.haml
@@ -1,3 +1,4 @@
+= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :get
 %h2 Student Details
 %table#student_requests.sortable
   %thead
