--- a/app/views/student_requests/index.html.haml
+++ b/app/views/student_requests/index.html.haml
@@ -1,3 +1,4 @@
+= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :get
 %h1 Students Dashboard Page
 %table#student_requests.sortable
   %thead
