--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -1,3 +1,4 @@
+= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :get
 %h1 Making New Request
 .form_new_request
   = form_tag student_requests_path, :id => 'new_request' do
