--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -7,7 +7,7 @@
         %td
           = label :student_request, :uin , 'UIN'
         %td
-          = text_field :student_request, :uin, class: 'input-field', :required => true
+          = text_field :student_request, :uin, class: 'input-field', :required => true, :value => session[:uin], :disabled => true
       %tr
         %td
           = label :student_request, :full_name, 'Full Name'
