1. post methods in place of get method. 2. session_helper for session variables 3. resetting session on logout 4. code refactor

--- a/app/views/student_requests/getStudentInformationByUin.html.haml
+++ b/app/views/student_requests/getStudentInformationByUin.html.haml
@@ -1,4 +1,4 @@
-= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :get
+= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :post
 %h2 Student Details
 %table#student_requests.sortable
   %thead
