--- a/app/views/student_requests/index.html.haml
+++ b/app/views/student_requests/index.html.haml
@@ -1,5 +1,6 @@
-= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :get
+= button_to 'Logout', {:action => "logout", :controller => "student_requests"}, :method => :post
 %h1 Students Dashboard Page
+#{session[:uin]}
 %table#student_requests.sortable
   %thead
     %tr
