Some cleanup css

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -116,6 +116,24 @@ input[type=submit] {
     border-radius: 4px;
     cursor: pointer;
 }
+.loginpage {
+    margin: auto;
+    width: 50%;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.loginpage input[type=text], input[type=email], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #f2f2f2;
+}
 
 .form_new_request {
     border-radius: 5px;
