--- a/app/views/student_requests/student_init.html.haml
+++ b/app/views/student_requests/student_init.html.haml
@@ -1,5 +1,5 @@
 %h1 Login Page
-.form_new_request
+.loginpage
   =  form_tag('/student_requests/login', method: :post) do
     %table{:border => "0"}
       %tr
