--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -25,7 +25,7 @@ h1 {
   border-bottom: 1px solid DarkSlateGrey;
 }
 h1.title {
-  margin: 0 0 1em;
+  margin: 0 0;
   padding: 10px;
   background-color: maroon;
   color: white;
@@ -116,6 +116,17 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+input[type= submit].logout-class
+{
+  width: 10%;
+  margin-left: 85%;
+}
+
+.Logout{
+  margin: auto;
+  width: 20%;
 }
 .loginpage {
     margin: auto;
