--- a/app/views/student_requests/student_init.html.haml
+++ b/app/views/student_requests/student_init.html.haml
@@ -6,7 +6,7 @@
         %td
           = label :session, :uin, 'Enter your UIN'
         %td
-          = text_field(:session, :uin, class: 'input-field')
+          = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]+", :oninvalid => "this.setCustomValidity('UIN given is invalid')")
     %br
     %br
     = submit_tag 'Login'
