--- a/app/views/student_requests/getStudentInformationById.html.haml
+++ b/app/views/student_requests/getStudentInformationById.html.haml
@@ -12,7 +12,7 @@
       %th Major
       %td= record.major
     %tr  
-      %th Classification
+      %th Class
       %td= record.classification
     %tr  
       %th Minor
@@ -33,10 +33,10 @@
       %th State
       %td= record.state
     %tr  
-      %th Notes By Student
+      %th Student Notes
       %td= record.notes
     %tr  
-      %th Notes By Me For Student
+      %th Admin Notes
       %td= record.notes_to_student
     %tr  
       %th{ :class => "update_admin" } Action
