--- a/app/views/student_requests/getStudentInformationByUin.html.haml
+++ b/app/views/student_requests/getStudentInformationByUin.html.haml
@@ -12,11 +12,11 @@
       %th Minor
       %th Course ID
       %th Section ID
-      %th Expected Graduation
+      %th Expec. Graduation
       %th Request Semester
       %th State
-      %th Notes By Student
-      %th Notes By Me For Student
+      %th Student Notes
+      %th Admin Notes
       
      
   %tbody
