--- a/app/views/student_requests/adminprivileges.html.haml
+++ b/app/views/student_requests/adminprivileges.html.haml
@@ -14,6 +14,6 @@
       
     %br
     %br
-    = submit_tag 'Save Request', :onclick => "return formValidation()"
+    = submit_tag 'Save Request'
   
   
