--- a/app/views/student_requests/getStudentInformationByUin.html.haml
+++ b/app/views/student_requests/getStudentInformationByUin.html.haml
@@ -31,6 +31,8 @@
         %td= record.minor
         %td= record.course_id
         %td= record.section_id
+        %td= record.expected_graduation
+        %td= record.request_semester
         %td= record.state
         %td= record.notes
         %td= record.notes_to_student
