--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = csrf_meta_tags
 
   %body
-    %h1.title CSE Force request System 
+    %h1.title= link_to '<button type="button" class="mainbutton">CSE Force Request System</button>'.html_safe, student_requests_homeRedirect_path
     = render 'layouts/header'
     
    
