Added archival logic

--- a/app/views/student_requests/adminprivileges.html.haml
+++ b/app/views/student_requests/adminprivileges.html.haml
@@ -17,3 +17,9 @@
     = submit_tag 'Save Request'
   
   
+  %br
+  %br
+  Archive All Force Request Data to Archival Database
+  
+  = form_tag('/student_requests/deleteall', method: "delete") do
+    = submit_tag 'Archive All Data'
